tests/files/type_checker_tests/should_fail/032.cmdr
//Should fail on equal when types are incompatible
x = true == "true";